# advent-of-code-2025

./: Cargo.toml  README.md  generate.sh
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  helpers.rs  main.rs
src/input/: sample01a.txt  sample01b.txt  sample05a.txt  sample10a.txt  sample10b.txt  sample10c.txt
