[package]
name = "aoc-2025-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
itertools = "0.13.0"
fancy-regex = "0.12"
lazy_static = "1.5.0"
geo = "0.32.0"
good_lp = { version = "1.14.2", features = ["highs"], default-features = false }